objects/sansancard__SSCard__c.object
<CustomObject>
    <fields>
        <fullName>sansancard__Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sansancard__AdsCity__c</fullName>
        <label>City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sansancard__AdsCountry__c</fullName>
        <label>Country</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sansancard__AdsState__c</fullName>
        <label>State</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sansancard__AdsStreet__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sansancard__AdsZip__c</fullName>
        <label>Zip</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sansancard__Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sansancard__Department__c</fullName>
        <label>Department</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sansancard__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sansancard__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>sansancard__Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>sansancard__FirstName__c</fullName>
        <label>FirstName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sansancard__LastName__c</fullName>
        <label>LastName</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sansancard__MobilePhone__c</fullName>
        <label>MobilePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>sansancard__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>sansancard__RegisteredTime__c</fullName>
        <label>RegisteredTime</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sansancard__Title__c</fullName>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sansancard__Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sansancard__reserved1__c</fullName>
        <label>reserved1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>SSCard</label>
    <listViews>
        <fullName>sansancard__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>